# research_radar_ai

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/literature-reader/: .gitignore  .npmrc  README.md  package.json  server.mjs  tmp-ssr-check.jsx  vite.config.mjs
apps/literature-reader/src/: App.jsx  styles.css
apps/web/: .env.example  eslint.config.mjs  next.config.mjs  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: phase-one-workbench.tsx
apps/web/lib/: api.ts
apps/web/scripts/: clean-next-cache.mjs
docs/: 01-product-requirements.md  02-mvp-scope.md  03-user-flows.md  04-architecture.md  05-data-model.md  06-api-contracts.md  07-ai-and-retrieval.md  08-acceptance-and-tests.md  09-roadmap.md  10-risk-compliance.md  11-future-capability-backlog.md  RR-DEV-002A-report.md  RR-DEV-003-report.md  RR-DEV-004-report.md  RR-DEV-005-report.md  RR-DEV-006-phase-1-acceptance-report.md  RR-DEV-007A-report.md  RR-DEV-007B-report.md  RR-DEV-007C-report.md  RR-DEV-008-gap-audit.md  RR-DEV-008-report.md  RR-DEV-009-workbench-agent-ux-plan.md  RR-DEV-010-current-product-acceptance-audit.md  RR-DEV-011-standalone-agent-research-scan.md  RR-MAIN-001-acceptance-report.md  RR-MAIN-001-literature-reader-migration.md  RR-MAIN-002-codebase-and-doc-gap-audit.md  RR-MAIN-004-project-handoff.md  RR-MAIN-005-hardening-and-task-digest-report.md  index.md
scripts/: check_phase1.ps1  check_phase1.sh  clean_literature_test_artifacts.ps1
(+63 files in other folders)
