[project]
name = "research-radar-ai"
version = "0.1.0"
description = "Research Radar AI backend services"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["services/api/src"]
testpaths = ["services/api/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
cache-dir = "services/api/.ruff-cache"
extend-exclude = [
  ".npm-cache",
  ".python",
  ".pytest_cache",
  ".ruff_cache",
  ".uv-cache",
  ".venv",
  "node_modules",
  "output",
  "tmp",
  "pytest-cache-files-*",
]
